welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:1: error: Missing closing brace `}' assumed here
var compteur:Int = 0
^PictureMono2:1: error: expected class or object definition
var compteur:Int = 0
^PictureMono2:3: error: expected class or object definition
def marquerSol() {baisseBrosse();leveBrosse()}
^PictureMono2:5: error: expected class or object definition
def faireV() {avance();avance();marquerSol();avance();gauche();avance();marquerSol();recule();droite();avance();marquerSol();avance();avance();gauche()}
^PictureMono2:7: error: expected class or object definition
def motif1() {for (compteur <- 1 to 4){faireV()}}
^PictureMono2:9: error: expected class or object definition
def ligneDroite() {
^PictureMono2:10: error: Missing closing brace `}' assumed here
var compteur2:Int = 0
^PictureMono2:10: error: expected class or object definition
var compteur2:Int = 0
^PictureMono2:11: error: expected class or object definition
for (compteur2 <- 1 to 7) {avance()}
^PictureMono2:13: error: expected class or object definition
def transition1() {var compteur3:Int = 0
^